force-app/main/default/objects/Peel__c/Peel__c.object-meta.xml
<CustomObject>
    <label>Peel</label>
    <nameField>
        <label>Peel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Peels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>