force-app/main/default/objects/Peel__c/fields/Cooling_method__c.field-meta.xml
<CustomField>
    <fullName>Cooling_method__c</fullName>
    <label>Cooling method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vitamin C gel</fullName>
            </value>
            <value>
                <fullName>Liquid Nitrogen Sweep</fullName>
            </value>
            <value>
                <fullName>Fan</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>